<resources>
    <string name="app_name">CommCare Reminders</string>
    <string name="channel_name">Default</string>
    <string name="channel_description">Notifications to remind on the pending tasks</string>
    <string name="no_permission_message">"We don't have required permissions to fetch data from CommCare. Please give app the permissions by going into app settings. "</string>
    <string name="no_notification_permission_message">"We don't have notification permissions to post notification for CommCare. Please give app the permissions by going into app settings. "</string>
    <string name="read_permission_rationale_message">We need you to grant permission to read the case data from CommCare in order to fetch reminders from CommCare and remind you time to time on your pending tasks.</string>
    <string name="read_notification_permission_rationale_message">We need you to grant permission to read the case data from CommCare in order to fetch reminders from CommCare and remind you time to time on your pending tasks.</string>
    Also we need notification permission to post notification for the Reminders application.
    <string name="alarm_permission_rationale_message">We need permission to schedule Alarms to be able to remind you of your tasks</string>
    <string name="ok">OK</string>
    <string name="permission_rationale_title">Permission Required</string>
    <string name="no_reminders_message">No reminders scheduled</string>
    <string name="permission_request">Permissions</string>
    <string name="permission_denied">Permission denied by application.</string>
    <string name="commcare_read_permission_msg">Read data from CommCare for fetching reminders from CommCare</string>
    <string name="permission">Permission</string>
    <string name="allow">Grant Permission</string>

    <string name="following_permission_not_granted">Following permission not granted by user :</string>
    <string name="storage_permission_not_granted">\n- Storage</string>
    <string name="notification_permission_not_granted">\n- Notification</string>
    <string name="storage_granted_msg">You’re all set! Reminders will be created once you log into your CommCare application</string>
    <string name="appSettingMsg">You can also enable the permission from the application setting. Just click on \"Go To Settings\" to open the application setting page.</string>
    <string name="close">Close</string>
    <string name="goToSetting">Go To Settings</string>
    <string name="note">Note</string>
    <string name="noPermissionNote">In case the permission is completely denied, then go to application setting to enable the permission. </string>
    <string name="requestReadPermission">Request Permission</string>
</resources>
